--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+
 <html>
 
-<head>
-    <meta charset="UTF-8" />
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Recipe Box</title>
+
 </head>
 
 <body>
